--- a/json/investments/Hiring/Application Security Engineer - Senior.json
+++ b/json/investments/Hiring/Application Security Engineer - Senior.json
@@ -3,7 +3,7 @@
     "metrics": {
         "security": {
             "teamCapacity": {
-                "prodSec": 2
+                "Product Security": 2
             }
         },
         "business": {
