--- a/json/investments/Hiring/Application Security Engineer - Junior.json
+++ b/json/investments/Hiring/Application Security Engineer - Junior.json
@@ -3,7 +3,7 @@
     "metrics": {
         "security": {
             "teamCapacity": {
-                "prodSec": 1
+                "Product Security": 1
             }
         },
         "business": {
