--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -24,6 +24,11 @@ jobs:
         run: npm run build
         working-directory: react/ciso-game
 
+      - name: Upload
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: react/ciso-game/build
+
   deploy:
     needs: build
 
