--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         working-directory: react/ciso-game
 
       - name: Build
-        run: npm run build
+        run: npm run build -e ciso-game
         working-directory: react/ciso-game
 
       - name: Upload
