--- a/json/investments/Hiring/Application Security Engineer - Mid.json
+++ b/json/investments/Hiring/Application Security Engineer - Mid.json
@@ -1,5 +1,5 @@
 {
-    "description": "Application Security Engineer - Mid Level - $135,000", 
+    "description": "Application Security Engineer - Mid Level: $135,000", 
     "metrics": {
         "security": {
             "teamCapacity": {
