--- a/json/investments/Hiring/Application Security Engineer - Junior.json
+++ b/json/investments/Hiring/Application Security Engineer - Junior.json
@@ -1,5 +1,5 @@
 {
-    "description": "Application Security Engineer - Junior - $95,000", 
+    "description": "Application Security Engineer - Junior: $95,000", 
     "metrics": {
         "security": {
             "teamCapacity": {
