--- a/json/investments/Hiring/Application Security Engineer - Senior.json
+++ b/json/investments/Hiring/Application Security Engineer - Senior.json
@@ -1,5 +1,5 @@
 {
-    "description": "Application Security Engineer - Senior - $200,000", 
+    "description": "Application Security Engineer - Senior: $200,000", 
     "metrics": {
         "security": {
             "teamCapacity": {
